--- a/client/src/app/component/home/home.component.html
+++ b/client/src/app/component/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row pt-5 pb-5">
+        <div class="col-md-6">
+            <div class="card bg-light">
+                <div class="card-header">
+                    <h6>JWT generated</h6>
+                </div>
+                <div class="card-body">
+                    {{accessToken | json}}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
