--- a/client/src/app/shared/navbar/navbar.component.html
+++ b/client/src/app/shared/navbar/navbar.component.html
@@ -50,7 +50,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Profile</a>
                         <div class="dropdown-divider"></div>
-                        <button class="dropdown-item" type="button" (click)="logout()">Logout</button>
+                        <button class="dropdown-item" type="button" (click)="logout()" [disabled]="loading">Logout</button>
                     </div>
                 </li>
             </ng-container>
