--- a/client/src/app/component/event/register/register.component.html
+++ b/client/src/app/component/event/register/register.component.html
@@ -28,8 +28,11 @@
                                 <input class="form-control" type="time" formControlName="willEndTime" />
                             </div>
                         </div>
-                        <div class="alert alert-danger" role="alert" *ngIf="error">
-                            {{ message }}
+                        <div class="alert alert-danger" role="alert" *ngIf="errors.length !== 0">
+                            Oops!
+                            <ul class="list-unstyled">
+                                <li *ngFor="let error of errors">{{error}}</li>
+                            </ul>
                           </div>
                     </div>
                 </div>
