--- a/client/src/app/component/event/list/list.component.html
+++ b/client/src/app/component/event/list/list.component.html
@@ -24,6 +24,12 @@
                     </ngx-datatable-column>
                 </ngx-datatable>
             </div>
+            <div class="alert alert-danger" role="alert" *ngIf="errors.length !== 0">
+                Oops!
+                <ul class="list-unstyled">
+                    <li *ngFor="let error of errors">{{error}}</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
